# slackslack

./: .gitignore  Cargo.toml  flake.nix
crates/emoji-renderer/src/: gpu.rs  present_blit.wgsl
crates/emoji-web/: Cargo.toml  serve.py  slack-app-manifest.yaml
crates/emoji-web/perf/: run.mjs
crates/emoji-web/src/: composite.wgsl  egui_panel.rs  gallery.rs  lib.rs  terminal_renderer.rs
crates/emoji-web/static/: index.html  slack_hosted.js
docs/parity/: README.md  catalog-current.md  coverage-matrix.json  drift-report.example.json  live-canary-policy.md  release-gates.json  scope-policy.md  seed-observations.md
docs/parity/fixtures/: README.md
libslack/: Cargo.toml
libslack/src/: client.rs  lib.rs  realtime.rs  types.rs
libslack/src/auth/: cookie.rs  mod.rs  token.rs
libslack/tests/: client_http.rs  parity_artifacts.rs
src/: app.rs  cache.rs  lib.rs  main.rs
src/auth/: browser.rs  cookie.rs  mod.rs  token.rs
src/event/: handler.rs  mod.rs
src/slack/: client.rs  mod.rs  types.rs  websocket.rs
src/state/: cache.rs  mod.rs
src/testing/: harness.rs  mock_client.rs  mod.rs  tests.rs
src/ui/: channels.rs  context_menu.rs  emoji.rs  emoji_picker.rs  global_search.rs  help.rs  images.rs  input.rs  messages.rs  mod.rs  status.rs  tests.rs  thread.rs  user_picker.rs
src/ui/emoji_preview/: common.rs  cpu.rs  gpu.rs  mod.rs  shader.wgsl
tests/: seam_integration.rs
