[package]
name = "slackslack"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-webpki-roots", "http2", "charset", "macos-system-configuration"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (Cookies)
rusqlite = { version = "0.32", features = ["bundled"] }

# Crypto (cookie decryption)
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha1 = "0.10"
hmac = "0.12"

# Error handling
thiserror = "2"
anyhow = "1"

# Image (kitty protocol)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = "0.22"
libc = "0.2"

# Notifications
notify-rust = "4"

# Misc
unicode-width = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
lto = true
strip = true
codegen-units = 1
