[package]
name = "slackslack"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["libslack"]
resolver = "2"

[dependencies]
libslack = { path = "libslack" }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-webpki-roots", "http2", "charset", "macos-system-configuration"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Image (kitty protocol)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = "0.22"
libc = "0.2"

# GPU rendering (3D emoji preview)
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
contour = "0.13"
earcutr = "0.5"
winit = "0.30"
softbuffer = "0.4"

# Notifications
notify-rust = "4"

# Misc
unicode-width = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "3.1.2"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
lto = true
strip = true
codegen-units = 1
